test(landing): 精简水面落地回放与共享救援测试的类型表达